Sun Feb 22 13:31:51 1998  Ian Lance Taylor  <ian@cygnus.com>

	* commit.c (lock_RCS): Don't call RCS_rewrite.

	* update.c (patch_file): If the revision is dead, let
	checkout_file handle it.
	* sanity.sh (death2): Add test for above patch: add
	death2-10a, death2-10b, death2-13a, and adjust
	death2-{2,4,5,11,14,diff-11,diff-12,19}.

	* cvs.h (RCS_FLAGS_KEEPFILE): Define.
	* rcs.c (RCS_checkin): If RCS_FLAGS_KEEPFILE is set in the flags
	parameter, don't unlink the working file.
	* checkin.c (Checkin): Don't copy the file.  Instead pass
 	RCS_FLAGS_KEEPFILE to RCS_checkin, and only check the file out
	again if it has changed.

1998-02-21  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (rcs_internal_unlockfile, RCS_rewrite): Don't assume errno
	means anything just because ferror is set.

Sat Feb 21 20:02:24 1998  Ian Lance Taylor  <ian@cygnus.com>

	* Makefile.in (clean): Change "/bin/rm" to "rm".

	* buffer.c (buf_append_buffer): Correct typo in comment.
	* rcs.c (RCS_putadmin): Likewise.

Fri Feb 20 17:53:06 1998  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (rcs_internal_unlockfile): Pass errno when calling error
 	because ferror is true.

1998-02-20  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (abspath): Don't assume that we can't write to /; this
	is the kind of thing that is sure to break sooner or later
	(especially on Windows).

	* sanity.sh: Add summary of which modules tests are which (at
	"modules").  Move cvsadm, abspath, and toplevel next to modules.
	Add comments to clarify the structure (such as it is).

Fri Feb 20 12:47:14 1998  Larry Jones  <larry.jones@sdrc.com>

	* admin.c (admin_fileproc): Better fix for -b.

	* rcs.c (RCS_whatbranch): Back out previous change.
	(RCS_getversion): Ditto.
	(RCS_setbranch): Treat an empty revision string like a null pointer.

1998-02-18  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_whatbranch): Fix indentation.

	* patch.c (patch_fileproc): Check for errors from fclose; check