@@ -1,3 +1,15 @@
+Sun Feb 22 23:14:25 1998  Steve Cameron  <steve.cameron@compaq.com>
+	and Ian Lance Taylor  <ian@cygnus.com>
+
+	* update.c (tag_update_dir): New static variable.
+	(update_dirent_proc): If no tag or date were specified when
+	creating a subdirectory, use the tag and/or date of the parent
+	directory.
+	(update_dirleave_proc): If we set the tag and/or date in
+	update_dirent_proc, reset them when we leave the directory.
+	* sanity.sh (branches2): New set of tests for above patch, and
+	related behaviour.
+
 Sun Feb 22 13:31:51 1998  Ian Lance Taylor  <ian@cygnus.com>
 
 	* commit.c (lock_RCS): Don't call RCS_rewrite.
